Darbas nera uzbaigtas,laiko stygius totalus. Na man bent svarbiausia kad pradziai zinias igyjau.

--- a/index.html
+++ b/index.html
@@ -129,10 +129,25 @@
     </article>
 
 
-    <article id="about">About</article>
+    <article id="about">
+      <img src="app/assets/logo.svg" alt="">
+      <p style="color:white">Erat tempor tempus erat malesuada</p>
+  <p style="font-size:20px; color:white"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
 
+</article>
 
-    <article id="pricing">Pricing</article>
+    <article id="pricing">
+
+  <div class="article-header">
+    Pricing options
+    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
+  </div>
+
+<div class="home-form">
+  <ul>Professional</ul>
+  <ul>$19</ul>
+</div>
+</article>
     <article id="reviews">
       <div class="article-header">
         WHAT OUR CUSTOMERS ARE SAYING
@@ -190,9 +205,17 @@
 
 </div>
     </article>
-    <article id="contacts"></article>
 
+    <article id="contacts">
+      <div class="article-header1">
+      <td></td>  CONTACT TO US</td> 
+      </div>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+<div class="1">
 
+</div>
+
+</article>
 
     <footer>
       <span>© 2019 Cheshire County</span>
